2005-06-23  Daniel Steffen  <das@users.sourceforge.net>

	*** 8.4.11 TAGGED FOR RELEASE ***

	* macosx/tkMacOSXDefault.h: change ENTRY_BORDER defaults to from 5 to 2
	to make default entry widgets in TkAqua look like in other aqua apps
	(and have same border dimensions as other platforms). [Bug 1176610]

	* unix/Makefile.in (install-private-headers): rewrite tkPort.h when
	installing private headers to remove ../unix relative #include path to
	tkUnixPort.h (which is incorrect at the installed location).

2005-06-21  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* doc/GetBitmap.3: Fix silly error in SYNOPSIS. [Bug 1224983]

2005-06-20  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tkImgGIF.c (mInit,Mgetc,Fread): Stop anyone from reading
	off the end of a buffer.

2005-06-18  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/Makefile: for X11 build, add -X11 suffix to unversioned wish
	symbolic link.

	* unix/tcl.m4 (Darwin): add -headerpad_max_install_names to LDFLAGS to
	ensure we can always relocate binaries with install_name_tool.

	* unix/configure: autoconf-2.13

2005-06-18  Don Porter	<dgp@users.sourceforge.net>

	* changes:		Update changes for 8.4.11 release

	* README:		Bump version number to 8.4.11
	* generic/tk.h:
	* macosx/Wish.pbproj/project.pbxproc:
	* unix/configure.in:
	* win/configure.in:

	* unix/configure.in:	Updated LOCALES to cover all msgs catalogs.

	* unix/configure:	autoconf
	* win/configure:

2005-06-04  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tkCanvas.c (SearchUids): Move all global data into
	protected storage to stop cross-thread issues. [Bug 1114977] 

2005-06-03  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tkConsole.c (Tk_CreateConsoleWindow, TkConsolePrint):
	Transmit the ConsoleInfo through AssocData, so renaming [console]
	won't make things break. [Bug 1016385]

2005-06-03  Daniel Steffen  <das@users.sourceforge.net>

	*** 8.4.10 TAGGED FOR RELEASE ***
